// 天书类型奖励领取
message m_title_change_tos {
optional  int32  title_id=1[default=0]; //称号ID
}

